blue-green-demo/blue-green-demo-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo # The name of our route; appears in the URL to access the app
  namespace: default # The namespace we're working in; also appears in the URL to access the app
spec:
  traffic:
    - revisionName: blue-green-demo-qtghs
      percent: 95
    - revisionName: blue-green-demo-x4hmc
      percent: 5
      name: v2
